# python-websockets

./: README.md  pyproject.toml  server.py
clients/: client.py  fastapi-client.py  fastapi_client.py
servers/: fastapi_server.py  multi_server.py
